# Cookey

./: .gitignore  .pr-body.md  AGENTS.md  README.md  compose.yaml  skills.md
.github/workflows/: ci.yml  cli-package-release.yml  release.yml
CommandLineTool/: AGENTS.md  main.go
CommandLineTool/internal/cli/: config.go  config_test.go  flags.go  flags_test.go  help.go  output.go  request.go  root.go  session.go  version.go
CommandLineTool/internal/config/: process_unix.go  process_windows.go  store.go  store_test.go  systeminfo_unix.go  systeminfo_windows.go
CommandLineTool/npm/: package.json
CommandLineTool/pip/: pyproject.toml
CommandLineTool/pip/cookey_cli/: launcher.py
CommandLineTool/scripts/: build-npm-package.mjs  build-pip-package.mjs  build-releases.mjs  build-targets.mjs  publish-npm-packages.mjs
Frontend/Android/: .gitignore  SIGNING.md  keystore.properties.example  settings.gradle.kts
Frontend/Apple/: AGENTS.md
Scripts/: build-release.sh  publish-android-to-play.sh  resolve-android-version.sh  scan.license.sh
Server/: AGENTS.md  README.md  apns.go  fcm.go  main.go  models.go  routes.go  server_test.go  storage.go
Web/: AGENTS.md  get-started.html  index.html  nginx.conf  package-lock.json  package.json  test-login-do.html  test-login-instruction.html  test-login-result.html  test-login-site.html  vite.config.ts
Web/public/: llms.txt
Web/src/: constants.ts  index.css  test-login-do.tsx  test-login-instruction.tsx  test-login-result.tsx  test-login-site.tsx
skills/cookey/: SKILL.md
skills/website-login/: SKILL.md
(+164 files in other folders)
